--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "multer": "^1.4.5-lts.1",
         "path": "^0.12.7",
         "pug": "^3.0.2"
+    },
+    "engines": {
+        "node": "v16.4.0"
     }
 }
